--- a/programme2/makefile
+++ b/programme2/makefile
@@ -1,18 +1,13 @@
 PWD=$(shell pwd)
 REP=$(shell basename $(PWD))
+CIBLE=$(REP).exe
 SOURCE=$(REP).c
-CIBLE=$(SOURCE:.c=.o)
 CFLAGS=-Wall
 
-# makefile générique pour produire un code source 
-# dont le nom correspond au nom du répertoire qui le contient
-
-all: $(CIBLE)
+all: 
 	@echo "Le programme $(CIBLE) a été produit dans le répertoire $(REP)"
-
-$(CIBLE) : adjacence_list.c
-	@echo "Production de $(CIBLE)"
-	gcc $(CFLAGS) $< -o $@
+	@echo -n "Production de $(CIBLE) \t"
+	gcc $(CFLAGS) $(SOURCE) -o $(CIBLE)
 
 clean: 
 	@echo "Nettoyage de $(CIBLE)"
