--- a/tests/makefile
+++ b/tests/makefile
@@ -18,3 +18,7 @@ $(CIBLE) : $(SOURCES)
 clean: 
 	@echo "Nettoyage de $(CIBLE)"
 	@rm -rf $(CIBLE)
+
+mrproper:
+	@echo "Suppression des fichiers output/"
+	@rm -rf output/*/*
